--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Erm hey.</title>
+    <title>Node database tutorial</title>
 </head>
 <body>
-<img src="https://media.giphy.com/media/3o6Zt7aSSZLX6U5WtW/source.gif" alt="ayo">
+<form class="CreateUser">
+    <h1>Create a new user</h1>
+    <label>
+        <input class="username" placeholder="username" type="text">
+
+        <input class="password" placeholder="password" type="password">
+    </label>
+    <input type="submit" value="Create user">
+</form>
+<script src="/app.js"></script>
 </body>
 </html>
