replace user/pass with nick/phone

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,9 @@
 <form class="CreateUser">
     <h1>Create a new user</h1>
     <label>
-        <input class="username" placeholder="username" type="text">
+        <input class="nickname" placeholder="nickname" type="text">
 
-        <input class="password" placeholder="password" type="password">
+        <input class="phone" placeholder="555-555-5555" type="tel">
     </label>
     <input type="submit" value="Create user">
 </form>
