add delete form to site, and rename phoneNumber to phone for consistency

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,14 @@
     </label>
     <input type="submit" value="Create user">
 </form>
+
+<form class="DeleteUser">
+    <h1>Delete a user</h1>
+    <label>
+        <input class="phone" placeholder="555-555-5555" type="tel">
+    </label>
+    <input type="submit" value="Delete user">
+</form>
 <script src="/app.js"></script>
 </body>
 </html>
