Remove greetings table in favor of local file, and allow users to set their own reminder time

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
         <input class="nickname" placeholder="nickname" type="text">
 
         <input class="phone" placeholder="555-555-5555" type="tel">
+
+        <input class="sendTime" placeholder="06:00:00" type="time">
     </label>
     <input type="submit" value="Create user">
 </form>
